Fixed Pagination bullets color in light mode and made them more visible.

--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -322,7 +322,7 @@ main {
 .swiper-pagination-bullet {
     width: 16px;
     height: 16px;
-    background-color: var(--primary-clr);
+    background-color: var(--pagination-color); /* before: var(--primary-clr); */
     border-radius: 50%;
 }
 
